Fix alignment on Blended View close button.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -504,7 +504,7 @@ object, embed, video, iframe {
                 background: rgba(61, 61, 61, 1.0);
                 display: none;
                 height: 22px;
-                margin-left: -10px;
+                margin-left: -14px;
                 position: absolute;
                 top: 3px;
                 width: 22px;
